[package]
name = "earth_escape"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
heron = { version = "1.1.0", features = ["2d"] }
wasm-bindgen = "0.2.79"
rand = "0.8.5"
bevy_embedded_assets = "0.2.1"
winit = "0.26.1"
image = "0.24.1"